# Clox-VM-Interpreter

./: .gitignore
clox/: Makefile  chunk.c  chunk.h  compile_commands.json  main.c  memory.c  memory.h
precedence/: Cargo.toml
precedence/precedence_macro/: Cargo.toml
precedence/precedence_macro/src/: lib.rs
precedence/src/: main.rs
precedence_macro/: Cargo.toml
precedence_macro/src/: lib.rs
rox/: Cargo.toml  Makefile
rox/benches/: my_benchmark.rs
rox/rox_tests/: basic_expr_test.rox  for_loop.rox  if_else_statement.rox  if_statement.rox  if_statement_scope.rox  local_var_reassign.rox  local_var_scope.rox  logical_expr.rox  while_loop.rox
rox/src/: chunk.rs  compiler.rs  error.rs  lib.rs  main.rs  object_list.rs  opcode.rs  parser.rs  precedence.rs  raw_stack.rs  run.rs  scanner.rs  stack.rs  token.rs  types.rs  value.rs  vm.rs
rox/src/frontend/: locals.rs  mod.rs
rox/src/hashtable/: entry.rs  map.rs  mod.rs  raw_table.rs  table.rs
rox/src/object/: mod.rs  roxstring.rs
rox/src/repl/: mod.rs
rox/src/stack/: mod.rs  raw_stack.rs  stack.rs
rox/tests/: basic_expr_test.rox  integration.rs
