[package]
name = "precedence_macro"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["proc-macro"]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.86", features=["full","derive"]}
quote = "1.0"
